--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #09181a;
+  height: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
