--- a/src/styling/Header.css
+++ b/src/styling/Header.css
@@ -1,10 +1,12 @@
 .App-header {
-  padding: 3vh 3vw 1vh 3vw;
+  padding: 10px 3vw 3px 3vw;
   background-color: #000000;
   color: #ffffff;
   position: fixed;
   top: 0;
   width: 100vw;
+  overflow: hidden;
+  height: 110px;
 }
 
 #Navbar {
