--- a/src/styling/Intro.css
+++ b/src/styling/Intro.css
@@ -8,7 +8,7 @@
     flex-direction: column;
 }
 
-.typewriter code {
+.typewriter p {
     overflow: hidden; 
     border-right: .15em solid orange; 
     white-space: nowrap; 
