organization: changed file structure to make sure all files are imported at root and passed down through props only

--- a/src/styling/Intro.css
+++ b/src/styling/Intro.css
@@ -1,6 +1,6 @@
 #Intro-row {
     height: calc(100vh - 100px);
-    background: url("../assets/fragments.svg") no-repeat center center; 
+    background: url("../assets/images/fragments.svg") no-repeat center center; 
     background-size: cover;
     display: flex;
     justify-content: center;
