Added resume file for download

--- a/src/styling/Project_row.css
+++ b/src/styling/Project_row.css
@@ -3,9 +3,10 @@
     height: 250px;
     object-fit: cover;
     border-radius: 50%;
+    box-shadow: 3px 3px 8px;
 }
 
 .project-card {
-    height: 700px;
+    height: 500px;
     padding: 1rem !important;
 }
