--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -16,14 +16,16 @@ h1, h2, h3, h4, h5 {
   font-family: "Playfair Display", "Times New Roman", serif;
 }
 
-/* h4, h5, h6 {
-  text-decoration: underline #945afd;
-} */
+button {
+  padding: 20px;
+  background-color: #000000;
+  color: #ffffff !important;
+  font-family: "Josefin Sans";
+  text-transform: uppercase;
+  border: none;
+  box-shadow: 3px 3px 8px #945afd;
+}
 
 a {
   color: #945afd
-}
-
-p {
-  font-size: 1.3em !important;
 }
