--- a/src/styling/Single_project.css
+++ b/src/styling/Single_project.css
@@ -15,9 +15,8 @@
     width: 15vw;
     object-fit: cover;
     border-radius: 50%;
-    border: 4px solid #945afd;
+    box-shadow: 3px 3px 8px #945afd;
     margin-top: 1.95rem;
-    /* align-items: flex-start; */
 }
 
 .material-icons {
