Correct project deployment links and add github links

--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5 {
 
 button {
   padding: 20px;
+  margin: 10px;
   background-color: #000000;
   color: #ffffff !important;
   font-family: "Josefin Sans";
