Change CTAs from buttons to links for a11y

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -14,3 +14,10 @@
 #content {
   margin-top: 110px;
 }
+
+.cta {
+  color: #000000;
+  font-family: "Josefin Sans";
+  text-transform: uppercase;
+  text-decoration: underline;
+}
